# movie-recommender

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
assets/: general_view_count.csv
exploration/: interactions.ipynb  movies.ipynb
movie_recommender/: __main__.py
movie_recommender/data_management/: annoy.py  recommendations.py
